fix picture too large on person page chrome

--- a/src/_sass/pages/person.scss
+++ b/src/_sass/pages/person.scss
@@ -12,7 +12,7 @@
   }
 
   &__right{
-    flex: 1 0 70%;
+    flex: 1 0 50%;
     padding-left: 6rem;
     @include respond(phone) { padding: 0; }
   }
